--- a/index.html
+++ b/index.html
@@ -6,11 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Razia Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <section id="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Sheikh Razia's</span> World!</h1>
+            <h3>Lecturer</h3>
+            <p>I'm currently looking for a position as a Lecturer in a University that values my analytical and technical skills and provides scope for updating my knowledge, I seek a University that will help me contribute to its development while concurrently
+                aiding my personal growth.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/sheikh-razia-sultana-a1b265244/">HIRE ME</a>
+        </div>
+        <div class="half-width"> <img src="images/razia with bg.png" alt=""></div>
+    </section>
+    <p></p>
+    <p></p>
 </body>
 
 </html>
