--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section id="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Sheikh Razia's</span> World!</h1>
@@ -24,7 +24,7 @@
         </div>
         <div class="half-width"> <img src="images/razia with bg.png" alt=""></div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/razia2 bg.png" alt="">
         </div>
@@ -35,8 +35,33 @@
             <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
         </div>
     </section>
+    <section class="experience-area">
+        <h2> Experiences</h2>
+        <div class="flexible-container">
+            <div id="Full-Stack-Web-Developer" class="experience-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-color">2023-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server
+                    and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="Baby-Web-Developer" class="experience-item">
+                <h2>
+                    Baby Web Developer
+                </h2>
+                <h3 class="orange-color">
+                    2022-2023 | Programming Hero Learner
+                </h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+    </section>
     <p></p>
     <p></p>
 </body>
+<footer>
+    <p>
+        ©created by Sheikh Razia Sultana | All rights reserved.
+    </p>
+</footer>
 
 </html>
